[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/game/mini_encyclopedia.gd" type="Script" id=1]
[ext_resource path="res://scenes/ResizableWindowDialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/segoeuisl40.fnt" type="BitmapFont" id=3]
[ext_resource path="res://fonts/segoeuisbi24.fnt" type="BitmapFont" id=4]
[ext_resource path="res://fonts/segoeuisli24.fnt" type="BitmapFont" id=5]
[ext_resource path="res://fonts/segoeuisb24.fnt" type="BitmapFont" id=6]
[ext_resource path="res://fonts/segoeuisl24.fnt" type="BitmapFont" id=7]
[ext_resource path="res://scenes/gui/encyclopediaFunctions.tscn" type="PackedScene" id=8]

[node name="mini_encyclopedia" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="ResizableWindowDialog" parent="." instance=ExtResource( 2 )]

visibility/visible = false

[node name="contentContainer" type="VBoxContainer" parent="ResizableWindowDialog"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 85.0
alignment = 0

[node name="entryTitle" type="Label" parent="ResizableWindowDialog/contentContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
custom_fonts/font = ExtResource( 3 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="ResizableWindowDialog/contentContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 44.0
margin/right = 40.0
margin/bottom = 47.0

[node name="entryContent" type="RichTextLabel" parent="ResizableWindowDialog/contentContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 51.0
margin/right = 40.0
margin/bottom = 51.0
custom_fonts/bold_italics_font = ExtResource( 4 )
custom_fonts/italics_font = ExtResource( 5 )
custom_fonts/bold_font = ExtResource( 6 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="backToTocButton" type="Button" parent="ResizableWindowDialog/contentContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 14.0
margin/top = 55.0
margin/right = 26.0
margin/bottom = 85.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="tocContainer" type="VBoxContainer" parent="ResizableWindowDialog"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
alignment = 0

[node name="Tree" type="Tree" parent="ResizableWindowDialog/tocContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
custom_fonts/font = ExtResource( 7 )

[node name="encyclopediaFunctions" parent="." instance=ExtResource( 8 )]

[connection signal="pressed" from="ResizableWindowDialog/contentContainer/backToTocButton" to="." method="_on_backToTocButton_pressed"]

[connection signal="cell_selected" from="ResizableWindowDialog/tocContainer/Tree" to="." method="_on_Tree_cell_selected"]


